test/WasmSpec/baselines/jsapi.baseline
TypeError: Wast Parsing error:1:1:
unexpected token "/*"
/*
^^
   at run (c:\projects\chakra\core\test\wasmspec\spec.js:101:3)
   at Global code (c:\projects\chakra\core\test\wasmspec\spec.js:492:1)
